# aitril

./: .claude-preferences.md  .dockerignore  .env.example  .gitignore  .validate-config.sh  CHANGELOG.md  DEPLOYMENT_CHECKPOINT.md  Dockerfile  Dockerfile.test  LICENSE  MANIFEST.in  README.md  demo-script.sh  demo-simple.sh  demo.cast  docker-compose.local.yml  docker-compose.yml  install.ps1  install.sh  pyproject.toml  test_cli_trilam.sh  test_gemini.py  test_gpt51.py  test_local_providers.py  test_provider_stream.py  test_stream.py  test_tool_execution.py  test_tool_stream.py  test_v0033_providers.py
aitril/: __init__.py  artifact.py  cache.py  cli.py  config.py  coordinator.py  deployment.py  display.py  files.py  orchestrator.py  providers.py  settings.py  tools.py  verification.py  web.py
aitril/static/: app.js  settings.js  style.css
features/: ask_mode.feature  build_mode.feature  cli.feature  deployment.feature  environment.py  tri_mode.feature  web_interface.feature
features/steps/: cli_steps.py  web_steps.py
static/: app.js  style.css
