[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aitril"
version = "0.0.10"
description = "AiTril - Multi-LLM orchestration CLI tool"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.14"
license = {text = "Apache-2.0"}
authors = [
    {name = "Collin Paran"}
]
keywords = ["llm", "ai", "cli", "orchestration", "openai", "anthropic", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.34.0",
    "google-generativeai>=0.3.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]

[project.scripts]
aitril = "aitril.cli:main"

[project.urls]
Homepage = "https://github.com/professai/aitril"
Repository = "https://github.com/professai/aitril"
Issues = "https://github.com/professai/aitril/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aitril*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
aitril = ["static/*"]
